<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.gravity</groupId>
  <artifactId>gravity-hpaste_2.11</artifactId>
  <version>0.4.2-LOCAL-CDH5.5.2</version>
  <packaging>jar</packaging>
  <name>hpaste</name>
  <url>http://github.com/GravityLabs/HPaste</url>
  <description>Scala mapper for hbase</description>
  <inceptionYear>2011</inceptionYear>
  <organization>
    <name>Gravity</name>
    <url>http://www.gravity.com/</url>
  </organization>

  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>7</version>
  </parent>


  <properties>
    <maven.compiler.source>1.6</maven.compiler.source>
    <maven.compiler.target>1.6</maven.compiler.target>
    <encoding>UTF-8</encoding>
    <scala.version>2.11.7</scala.version>
    <scala.major.version>2.11</scala.major.version>
  </properties>

  <profiles>
    <profile>
      <id>scala_2.11</id>
      <properties>
        <scala.version>2.11.7</scala.version>
        <scala.major.version>2.11</scala.major.version>
      </properties>
    </profile>
    <profile>
      <id>release-sign-artifacts</id>
      <activation>
        <property>
          <name>performRelease</name>
          <value>true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.5</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>



  <developers>
    <developer>
      <id>Lemmsjid</id>
      <name>Chris Bissell</name>
      <email>chris@gravity.com</email>
      <url>http://github.com/Lemmsjid</url>
      <organization>Gravity</organization>
      <organizationUrl>http://www.gravity.com/</organizationUrl>
      <roles>
        <role>developer</role>
        <role>architect</role>
      </roles>
      <timezone>-8</timezone>
    </developer>
    <developer>
      <id>erraggy</id>
      <name>Robbie Coleman</name>
      <email>robbie@gravity.com</email>
      <url>http://robbie.robnrob.com/</url>
      <organization>Gravity</organization>
      <organizationUrl>http://www.gravity.com/</organizationUrl>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>-8</timezone>
      <properties>
        <picUrl>http://1.gravatar.com/avatar/dc77b368ec1f077dcc4aca3b9c003d2d</picUrl>
      </properties>
    </developer>
  </developers>
  <scm>
    <url>scm:git:git@github.com:GravityLabs/HPaste.git</url>
    <connection>scm:git:git@github.com:GravityLabs/HPaste.git</connection>
    <developerConnection>scm:git:git@github.com:GravityLabs/HPaste.git</developerConnection>
  </scm>
  <licenses>
    <license>
      <name>Apache 2</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
      <comments>A business-friendly OSS license</comments>
    </license>
  </licenses>

  <repositories>
    <repository>
      <id>cloudera</id>
      <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
    </repository>
  </repositories>

  <dependencies>

    <dependency>
      <groupId>org.apache.hadoop</groupId>
      <artifactId>hadoop-client</artifactId>
      <version>2.6.0-mr1-cdh5.5.2</version>
    </dependency>

    <dependency>
      <groupId>joda-time</groupId>
      <artifactId>joda-time</artifactId>
      <version>2.3</version>
    </dependency>

    <dependency>
      <groupId>org.apache.hbase</groupId>
      <artifactId>hbase-testing-util</artifactId>
      <version>1.0.0-cdh5.5.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.hbase</groupId>
      <artifactId>hbase-client</artifactId>
      <version>1.0.0-cdh5.5.2</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.hbase</groupId>
      <artifactId>hbase-server</artifactId>
      <version>1.0.0-cdh5.5.2</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>net.sf.trove4j</groupId>
      <artifactId>trove4j</artifactId>
      <version>3.0.3</version>
    </dependency>
    <dependency>
      <groupId>org.apache.hadoop</groupId>
      <artifactId>hadoop-minicluster</artifactId>
      <version>2.6.0-mr1-cdh5.5.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.hbase</groupId>
      <artifactId>hbase-client</artifactId>
      <version>1.0.0-cdh5.5.2</version>
      <type>test-jar</type>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>org.jruby</groupId>
          <artifactId>jruby-complete</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.hbase</groupId>
      <artifactId>asynchbase</artifactId>
      <version>1.7.2</version>
      <exclusions>
        <exclusion>
          <groupId>org.slf4j</groupId>
          <artifactId>log4j-over-slf4j</artifactId>
        </exclusion>
        <!--<exclusion>-->
          <!--<groupId>org.slf4j</groupId>-->
          <!--<artifactId>jcl-over-slf4j</artifactId>-->
        <!--</exclusion>-->
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.scala-lang</groupId>
      <artifactId>scala-library</artifactId>
      <version>${scala.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- Test -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.8.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>net.alchim31.maven</groupId>
        <artifactId>scala-maven-plugin</artifactId>
        <configuration>
          <scalaVersion>${scala.version}</scalaVersion>
          <recompileMode>incremental</recompileMode>
          <useZincServer>true</useZincServer>
          <args>
            <arg>-target:jvm-1.7</arg>
          </args>
          <jvmArgs>
            <jvmArg>-Xss64m</jvmArg>
            <jvmArg>-XX:PermSize=256m</jvmArg>
            <jvmArg>-Xmx2048m</jvmArg>
            <jvmArg>-Xms512m</jvmArg>
          </jvmArgs>
          <javacArgs>
            <javacArg>-source</javacArg>
            <javacArg>1.7</javacArg>
            <javacArg>-target</javacArg>
            <javacArg>1.7</javacArg>
          </javacArgs>
        </configuration>
        <version>3.2.2</version>
        <executions>
          <execution>
            <id>scala-compile-first</id>
            <phase>process-resources</phase>
            <goals>
              <goal>add-source</goal>
              <goal>compile</goal>
            </goals>
          </execution>
          <execution>
            <id>scala-test-compile</id>
            <phase>process-test-resources</phase>
            <goals>
              <goal>testCompile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
        </configuration>
        <executions>
          <execution>
            <phase>compile</phase>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.6</version>
        <configuration>
          <argLine>-Xmx1024m</argLine>
          <useFile>false</useFile>
          <disableXmlReport>true</disableXmlReport>
          <includes>
            <include>**/*Test.*</include>
          </includes>
          <excludes>
            <exclude>**/*IT.*</exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.2.2</version>
      </plugin>
      <plugin>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>deploy</phase>
            <goals><goal>jar-no-fork</goal></goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <!-- explicitly define maven-deploy-plugin after other to force exec order -->
        <artifactId>maven-deploy-plugin</artifactId>
        <executions>
          <execution>
            <id>deploy</id>
            <phase>deploy</phase>
            <goals><goal>deploy</goal></goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <distributionManagement>
    <repository>
      <id>deployment</id>
      <name>Internal Releases</name>
      <url>http://nexus.prod.grv/nexus/content/repositories/releases/</url>
    </repository>
    <snapshotRepository>
      <id>deployment</id>
      <name>Internal Releases</name>
      <url>http://nexus.prod.grv/nexus/content/repositories/snapshots/</url>
    </snapshotRepository>
  </distributionManagement>
</project>
